# ESP32

./: README.md
blinky/: Cargo.toml
segment/: Cargo.toml
segment/src/: lib.rs
